final changes integrated

--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
 
         maven {
             url 'https://maven.fabric.io/public'
+
         }
         
     }
@@ -28,6 +29,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url "https://jitpack.io" }
         
     }
 }
