--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,12 +37,20 @@ dependencies {
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
     implementation 'com.intuit.ssp:ssp-android:1.0.6'
 
+    // Library for Crop functionality
     api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
 
-    implementation 'com.github.bumptech.glide:glide:4.10.0'
+    implementation 'com.github.bumptech.glide:glide:4.10.0'  // Glide
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
 
 
+    // Firebase Crashlytics to monitor crashes
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
     compile 'com.android.support:recyclerview-v7:28.0.0'
+
+    // Photoview for zoom functionality
+    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
+    androidTestImplementation 'androidx.test:rules:1.3.0-alpha02'
+
+
 }
